Update reward preview + activity engine fixes