@@ -20,9 +20,9 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
+
 @Slf4j
 @Service
 @RequiredArgsConstructor
@@ -34,17 +34,20 @@ public class MemberApplicationServiceImpl implements MemberApplicationService {
     private final MembershipRepository membershipRepo;
     private final NotificationService notificationService;
 
-    // ✅ Student submits application
+    // =====================================================================================
+    //  STUDENT SUBMITS APPLICATION
+    // =====================================================================================
     @Override
     @Transactional
     public MemberApplicationResponse createByEmail(String email, MemberApplicationCreateRequest req) {
-        // 🔹 1. Tìm user và club
+
         User user = userRepo.findByEmail(email)
                 .orElseThrow(() -> new ApiException(HttpStatus.NOT_FOUND, "User not found"));
+
         Club club = clubRepo.findById(req.getClubId())
                 .orElseThrow(() -> new ApiException(HttpStatus.NOT_FOUND, "Club not found"));
 
-        // 🔹 2. Kiểm tra xem user có đang là thành viên hợp lệ không
+        // Check membership status (cannot join again)
         List<MembershipStateEnum> blockedStates = List.of(
                 MembershipStateEnum.ACTIVE,
                 MembershipStateEnum.APPROVED,
@@ -61,17 +64,16 @@ public class MemberApplicationServiceImpl implements MemberApplicationService {
             throw new ApiException(HttpStatus.BAD_REQUEST, "You are already a member of this club");
         }
 
-        // 🔹 3. Kiểm tra trùng đơn ứng tuyển đang pending
-        boolean hasPendingApplication = appRepo.findAll().stream()
+        // Check existing pending application
+        boolean hasPending = appRepo.findAll().stream()
                 .anyMatch(a -> a.getApplicant().getUserId().equals(user.getUserId())
                         && a.getClub().getClubId().equals(req.getClubId())
                         && a.getStatus() == MemberApplicationStatusEnum.PENDING);
 
-        if (hasPendingApplication) {
+        if (hasPending) {
             throw new ApiException(HttpStatus.CONFLICT, "You already have a pending application for this club");
         }
 
-        // 🔹 4. Tạo đơn ứng tuyển mới
         MemberApplication app = MemberApplication.builder()
                 .club(club)
                 .applicant(user)
@@ -82,29 +84,32 @@ public class MemberApplicationServiceImpl implements MemberApplicationService {
 
         MemberApplication saved = appRepo.save(app);
 
-        // 🔹 5. Gửi email thông báo
         try {
             notificationService.sendApplicationSubmitted(user.getEmail(), club.getName());
         } catch (Exception e) {
-            log.warn("Failed to send application notification email to {}", user.getEmail(), e);
+            log.warn("Email send failed for {}", user.getEmail(), e);
         }
 
         return mapToResponse(saved);
     }
 
 
-    // ✅ Leader / Admin update status
+    // =====================================================================================
+    //  LEADER / ADMIN UPDATE APPLICATION STATUS
+    // =====================================================================================
     @Override
     @Transactional
-    public MemberApplicationResponse updateStatusByEmail(String email, Long applicationId, MemberApplicationStatusUpdateRequest req) {
-
+    public MemberApplicationResponse updateStatusByEmail(
+            String email,
+            Long applicationId,
+            MemberApplicationStatusUpdateRequest req
+    ) {
         User actor = userRepo.findByEmail(email)
                 .orElseThrow(() -> new ApiException(HttpStatus.NOT_FOUND, "User not found"));
 
         MemberApplication app = appRepo.findById(applicationId)
                 .orElseThrow(() -> new ApiException(HttpStatus.NOT_FOUND, "Application not found"));
 
-        // Kiểm tra quyền
         if (!isClubLeaderOrVice(actor.getUserId(), app.getClub().getClubId()) && !hasAdminRole(actor)) {
             throw new ApiException(HttpStatus.FORBIDDEN, "Access denied");
         }
@@ -115,9 +120,7 @@ public class MemberApplicationServiceImpl implements MemberApplicationService {
         app.setUpdatedAt(LocalDateTime.now());
         app.setHandledBy(actor);
 
-        // ================================
-        // ✅ KHI LEADER APPROVE ĐƠN
-        // ================================
+        // Approve application
         if (newStatus == MemberApplicationStatusEnum.APPROVED) {
 
             List<MembershipStateEnum> activeStates = List.of(
@@ -136,33 +139,29 @@ public class MemberApplicationServiceImpl implements MemberApplicationService {
                 throw new ApiException(HttpStatus.CONFLICT, "User is already a member or has a pending request");
             }
 
-            // ================================
-            // 🔄 Reuse membership cũ nếu có
-            // ================================
-            Optional<Membership> existingOpt = membershipRepo.findByUser_UserIdAndClub_ClubId(
-                    app.getApplicant().getUserId(),
-                    app.getClub().getClubId()
-            );
+            Optional<Membership> existingOpt =
+                    membershipRepo.findByUser_UserIdAndClub_ClubId(
+                            app.getApplicant().getUserId(),
+                            app.getClub().getClubId()
+                    );
 
             if (existingOpt.isPresent()) {
+                // RE-ACTIVATE OLD MEMBERSHIP
                 Membership existing = existingOpt.get();
-
                 existing.setState(MembershipStateEnum.ACTIVE);
                 existing.setJoinedDate(LocalDate.now());
                 existing.setEndDate(null);
                 existing.setClubRole(ClubRoleEnum.MEMBER);
 
-                // DEFAULTS BẮT BUỘC
-                existing.setMemberLevel(MemberLevelEnum.BASIC);
+                // default values
                 existing.setMemberMultiplier(1.0);
                 existing.setStaff(false);
 
                 membershipRepo.save(existing);
 
             } else {
-                // ================================
-                // 🆕 Tạo membership mới
-                // ================================
+
+                // CREATE NEW MEMBERSHIP
                 Membership m = new Membership();
                 m.setUser(app.getApplicant());
                 m.setClub(app.getClub());
@@ -170,15 +169,13 @@ public class MemberApplicationServiceImpl implements MemberApplicationService {
                 m.setState(MembershipStateEnum.ACTIVE);
                 m.setJoinedDate(LocalDate.now());
 
-                // DEFAULTS BẮT BUỘC
-                m.setMemberLevel(MemberLevelEnum.BASIC);
+                // default values
                 m.setMemberMultiplier(1.0);
                 m.setStaff(false);
 
                 membershipRepo.save(m);
             }
 
-            // Gửi email thông báo APPROVED
             notificationService.sendApplicationResult(
                     app.getApplicant().getEmail(),
                     app.getClub().getName(),
@@ -186,9 +183,7 @@ public class MemberApplicationServiceImpl implements MemberApplicationService {
             );
         }
 
-        // ================================
-        // ❌ Khi Leader từ chối
-        // ================================
+        // Reject application
         if (newStatus == MemberApplicationStatusEnum.REJECTED) {
             notificationService.sendApplicationResult(
                     app.getApplicant().getEmail(),
@@ -197,44 +192,37 @@ public class MemberApplicationServiceImpl implements MemberApplicationService {
             );
         }
 
-        MemberApplication saved = appRepo.save(app);
-        return mapToResponse(saved);
+        return mapToResponse(appRepo.save(app));
     }
 
 
+    // =====================================================================================
+    //  QUERY FUNCTIONS
+    // =====================================================================================
 
-    // ✅ Admin / Staff view all
     @Override
     public List<MemberApplicationResponse> findAll() {
-        return appRepo.findAll().stream().map(this::mapToResponse).collect(Collectors.toList());
+        return appRepo.findAll().stream().map(this::mapToResponse).toList();
     }
 
-    // ✅ Student / Leader view by email
     @Override
     public List<MemberApplicationResponse> findApplicationsByEmail(String email) {
-        // 🔹 1. Lấy user hiện tại
+
         User user = userRepo.findByEmail(email)
                 .orElseThrow(() -> new ApiException(HttpStatus.NOT_FOUND, "User not found"));
 
-        // 🔹 2. Kiểm tra vai trò
-        boolean isAdminOrStaff = hasAdminRole(user);
+        boolean isAdmin = hasAdminRole(user);
 
-        // 🔹 3. Lấy danh sách membership của user
         var memberships = membershipRepo.findByUser_UserId(user.getUserId());
 
         boolean isLeaderOrVice = memberships.stream()
                 .anyMatch(m -> m.getClubRole() == ClubRoleEnum.LEADER ||
                         m.getClubRole() == ClubRoleEnum.VICE_LEADER);
 
-        // ✅ Nếu là Admin/Staff → xem toàn bộ
-        if (isAdminOrStaff) {
-            return appRepo.findAll().stream()
-                    .filter(a -> a.getClub() != null)
-                    .map(this::mapToResponse)
-                    .collect(Collectors.toList());
+        if (isAdmin) {
+            return appRepo.findAll().stream().map(this::mapToResponse).toList();
         }
 
-        // ✅ Nếu là Leader/Vice → xem đơn thuộc CLB mà mình quản lý
         if (isLeaderOrVice) {
             var managedClubIds = memberships.stream()
                     .filter(m -> m.getClubRole() == ClubRoleEnum.LEADER ||
@@ -245,32 +233,404 @@ public class MemberApplicationServiceImpl implements MemberApplicationService {
             return appRepo.findAll().stream()
                     .filter(a -> managedClubIds.contains(a.getClub().getClubId()))
                     .map(this::mapToResponse)
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
-        // ✅ Nếu là Student → chỉ xem đơn của chính mình
-        return appRepo.findByApplicant_UserId(user.getUserId()).stream()
+        return appRepo.findByApplicant_UserId(user.getUserId())
+                .stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 
-
-    // ✅ Get by clubId (leader / staff)
     @Override
     public List<MemberApplicationResponse> getByClubId(CustomUserDetails principal, Long clubId) {
-        Long userId = principal.getId();
-        if (!isClubLeaderOrVice(userId, clubId) && !hasAdminRole(principal.getUser())) {
+
+        if (!isClubLeaderOrVice(principal.getId(), clubId) &&
+                !hasAdminRole(principal.getUser())) {
             throw new ApiException(HttpStatus.FORBIDDEN, "Access denied");
         }
 
         return appRepo.findAll().stream()
                 .filter(a -> a.getClub().getClubId().equals(clubId))
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    // 🔧 Helper mapping
+
+    // =====================================================================================
+    //  GET BY ID
+    // =====================================================================================
+
+    @Override
+    public MemberApplicationResponse getApplicationById(CustomUserDetails principal, Long id) {
+
+        MemberApplication app = appRepo.findById(id)
+                .orElseThrow(() -> new ApiException(HttpStatus.NOT_FOUND, "Application not found"));
+
+        boolean isOwner = app.getApplicant().getUserId().equals(principal.getId());
+        boolean canView = hasAdminRole(principal.getUser())
+                || isClubLeaderOrVice(principal.getId(), app.getClub().getClubId());
+
+        if (!isOwner && !canView)
+            throw new ApiException(HttpStatus.FORBIDDEN, "Access denied");
+
+        return mapToResponse(app);
+    }
+
+
+    // =====================================================================================
+    //  CANCEL APPLICATION
+    // =====================================================================================
+
+    @Override
+    @Transactional
+    public void cancelApplication(CustomUserDetails principal, Long id) {
+
+        MemberApplication app = appRepo.findById(id)
+                .orElseThrow(() -> new ApiException(HttpStatus.NOT_FOUND, "Application not found"));
+
+        if (!app.getApplicant().getUserId().equals(principal.getId()))
+            throw new ApiException(HttpStatus.FORBIDDEN, "You can only cancel your own applications");
+
+        if (app.getStatus() != MemberApplicationStatusEnum.PENDING)
+            throw new ApiException(HttpStatus.BAD_REQUEST, "Only pending applications can be cancelled");
+
+        appRepo.delete(app);
+    }
+
+
+    // =====================================================================================
+    //  PENDING BY CLUB
+    // =====================================================================================
+
+    @Override
+    public List<MemberApplicationResponse> getPendingByClub(CustomUserDetails principal, Long clubId) {
+
+        if (!isClubLeaderOrVice(principal.getId(), clubId) &&
+                !hasAdminRole(principal.getUser())) {
+            throw new ApiException(HttpStatus.FORBIDDEN, "Access denied");
+        }
+
+        return appRepo.findAll().stream()
+                .filter(a -> a.getClub().getClubId().equals(clubId)
+                        && a.getStatus() == MemberApplicationStatusEnum.PENDING)
+                .map(this::mapToResponse)
+                .toList();
+    }
+
+
+    // =====================================================================================
+    //  APPROVE (LEADER)
+    // =====================================================================================
+
+    @Override
+    @Transactional
+    public MemberApplicationResponse approve(CustomUserDetails principal, Long id) {
+
+        MemberApplication app = appRepo.findById(id)
+                .orElseThrow(() -> new ApiException(HttpStatus.NOT_FOUND, "Application not found"));
+
+        if (!isClubLeaderOrVice(principal.getId(), app.getClub().getClubId()) &&
+                !hasAdminRole(principal.getUser()))
+            throw new ApiException(HttpStatus.FORBIDDEN, "Access denied");
+
+        app.setStatus(MemberApplicationStatusEnum.APPROVED);
+        app.setHandledBy(principal.getUser());
+        app.setUpdatedAt(LocalDateTime.now());
+        appRepo.save(app);
+
+        List<MembershipStateEnum> activeStates = List.of(
+                MembershipStateEnum.ACTIVE,
+                MembershipStateEnum.APPROVED,
+                MembershipStateEnum.PENDING
+        );
+
+        boolean hasActive = membershipRepo
+                .existsByUser_UserIdAndClub_ClubIdAndStateIn(
+                        app.getApplicant().getUserId(),
+                        app.getClub().getClubId(),
+                        activeStates
+                );
+
+        if (!hasActive) {
+
+            Optional<Membership> existingOpt =
+                    membershipRepo.findByUser_UserIdAndClub_ClubId(
+                            app.getApplicant().getUserId(),
+                            app.getClub().getClubId()
+                    );
+
+            if (existingOpt.isPresent()) {
+                Membership existing = existingOpt.get();
+                existing.setState(MembershipStateEnum.ACTIVE);
+                existing.setJoinedDate(LocalDate.now());
+                existing.setEndDate(null);
+                existing.setClubRole(ClubRoleEnum.MEMBER);
+
+                existing.setMemberMultiplier(1.0);
+                existing.setStaff(false);
+
+                membershipRepo.save(existing);
+
+            } else {
+
+                Membership m = new Membership();
+                m.setUser(app.getApplicant());
+                m.setClub(app.getClub());
+                m.setClubRole(ClubRoleEnum.MEMBER);
+                m.setState(MembershipStateEnum.ACTIVE);
+                m.setJoinedDate(LocalDate.now());
+
+                m.setMemberMultiplier(1.0);
+                m.setStaff(false);
+
+                membershipRepo.save(m);
+            }
+        }
+
+        notificationService.sendApplicationResult(
+                app.getApplicant().getEmail(),
+                app.getClub().getName(),
+                true
+        );
+
+        return mapToResponse(app);
+    }
+
+
+    // =====================================================================================
+    //  REJECT
+    // =====================================================================================
+
+    @Override
+    @Transactional
+    public MemberApplicationResponse reject(CustomUserDetails principal, Long id, String note) {
+
+        MemberApplication app = appRepo.findById(id)
+                .orElseThrow(() -> new ApiException(HttpStatus.NOT_FOUND, "Application not found"));
+
+        if (!isClubLeaderOrVice(principal.getId(), app.getClub().getClubId()
+        ) && !hasAdminRole(principal.getUser()))
+            throw new ApiException(HttpStatus.FORBIDDEN, "Access denied");
+
+        app.setStatus(MemberApplicationStatusEnum.REJECTED);
+        app.setNote(note);
+        app.setHandledBy(principal.getUser());
+        app.setUpdatedAt(LocalDateTime.now());
+
+        appRepo.save(app);
+
+        notificationService.sendApplicationResult(
+                app.getApplicant().getEmail(),
+                app.getClub().getName(),
+                false
+        );
+
+        return mapToResponse(app);
+    }
+
+
+    // =====================================================================================
+    //  STATS
+    // =====================================================================================
+
+    @Override
+    public MemberApplicationStatsResponse getStatsByClub(Long clubId) {
+
+        Club club = clubRepo.findById(clubId)
+                .orElseThrow(() -> new ApiException(HttpStatus.NOT_FOUND, "Club not found"));
+
+        long total =
+                appRepo.countByClubAndStatus(club, MemberApplicationStatusEnum.PENDING)
+                        + appRepo.countByClubAndStatus(club, MemberApplicationStatusEnum.APPROVED)
+                        + appRepo.countByClubAndStatus(club, MemberApplicationStatusEnum.REJECTED);
+
+        return MemberApplicationStatsResponse.builder()
+                .clubId(club.getClubId())
+                .clubName(club.getName())
+                .total(total)
+                .pending(appRepo.countByClubAndStatus(club, MemberApplicationStatusEnum.PENDING))
+                .approved(appRepo.countByClubAndStatus(club, MemberApplicationStatusEnum.APPROVED))
+                .rejected(appRepo.countByClubAndStatus(club, MemberApplicationStatusEnum.REJECTED))
+                .build();
+    }
+
+
+    // =====================================================================================
+    //  HANDLED APPLICATIONS
+    // =====================================================================================
+
+    @Override
+    public List<MemberApplicationResponse> getHandledApplications(CustomUserDetails principal, Long clubId) {
+
+        if (!isClubLeaderOrVice(principal.getId(), clubId)
+                && !hasAdminRole(principal.getUser())) {
+            throw new ApiException(HttpStatus.FORBIDDEN, "Access denied");
+        }
+
+        return appRepo.findAll().stream()
+                .filter(a -> a.getClub().getClubId().equals(clubId)
+                        && (a.getStatus() == MemberApplicationStatusEnum.APPROVED
+                        || a.getStatus() == MemberApplicationStatusEnum.REJECTED))
+                .map(this::mapToResponse)
+                .toList();
+    }
+
+
+    // =====================================================================================
+    //  RE-SUBMIT REJECTED APPLICATION
+    // =====================================================================================
+
+    @Override
+    @Transactional
+    public MemberApplicationResponse resubmitApplication(
+            CustomUserDetails principal,
+            Long id,
+            MemberApplicationCreateRequest req
+    ) {
+
+        MemberApplication oldApp = appRepo.findById(id)
+                .orElseThrow(() -> new ApiException(HttpStatus.NOT_FOUND, "Application not found"));
+
+        if (!oldApp.getApplicant().getUserId().equals(principal.getId())) {
+            throw new ApiException(HttpStatus.FORBIDDEN, "You can only resubmit your own applications");
+        }
+
+        if (oldApp.getStatus() != MemberApplicationStatusEnum.REJECTED) {
+            throw new ApiException(HttpStatus.BAD_REQUEST, "Only rejected applications can be resubmitted");
+        }
+
+        oldApp.setMessage(req.getMessage());
+        oldApp.setStatus(MemberApplicationStatusEnum.PENDING);
+        oldApp.setNote(null);
+        oldApp.setHandledBy(null);
+        oldApp.setUpdatedAt(LocalDateTime.now());
+
+        appRepo.save(oldApp);
+
+        notificationService.sendApplicationSubmitted(
+                principal.getUsername(),
+                oldApp.getClub().getName()
+        );
+
+        return mapToResponse(oldApp);
+    }
+
+
+    // =====================================================================================
+    //  UPDATE NOTE
+    // =====================================================================================
+
+    @Override
+    @Transactional
+    public MemberApplicationResponse updateNoteForApplication(
+            CustomUserDetails principal,
+            Long id,
+            String note
+    ) {
+        MemberApplication app = appRepo.findById(id)
+                .orElseThrow(() -> new ApiException(HttpStatus.NOT_FOUND, "Application not found"));
+
+        if (!isClubLeaderOrVice(principal.getId(), app.getClub().getClubId())
+                && !hasAdminRole(principal.getUser())) {
+            throw new ApiException(HttpStatus.FORBIDDEN, "Access denied");
+        }
+
+        app.setNote(note);
+        app.setUpdatedAt(LocalDateTime.now());
+        appRepo.save(app);
+        return mapToResponse(app);
+    }
+
+
+    // =====================================================================================
+    //  FILTER BY STATUS
+    // =====================================================================================
+
+    @Override
+    public List<MemberApplicationResponse> getApplicationsByStatus(String status) {
+
+        MemberApplicationStatusEnum st;
+        try {
+            st = MemberApplicationStatusEnum.valueOf(status.toUpperCase());
+        } catch (IllegalArgumentException e) {
+            throw new ApiException(HttpStatus.BAD_REQUEST, "Invalid status: " + status);
+        }
+
+        return appRepo.findAll().stream()
+                .filter(a -> a.getStatus() == st)
+                .map(this::mapToResponse)
+                .toList();
+    }
+
+
+    // =====================================================================================
+    //  RECENT APPLICATIONS
+    // =====================================================================================
+
+    @Override
+    public List<MemberApplicationResponse> getRecentApplications() {
+
+        return appRepo.findAll().stream()
+                .sorted((a, b) -> b.getCreatedAt().compareTo(a.getCreatedAt()))
+                .limit(10)
+                .map(this::mapToResponse)
+                .toList();
+    }
+
+
+    // =====================================================================================
+    //  DAILY STATS
+    // =====================================================================================
+
+    @Override
+    public List<MemberApplicationStatsResponse> getDailyStats(Long clubId) {
+
+        Club club = clubRepo.findById(clubId)
+                .orElseThrow(() -> new ApiException(HttpStatus.NOT_FOUND, "Club not found"));
+
+        LocalDateTime sevenDaysAgo = LocalDateTime.now().minusDays(7);
+
+        return appRepo.findAll().stream()
+                .filter(a -> a.getClub().equals(club)
+                        && a.getCreatedAt().isAfter(sevenDaysAgo))
+                .collect(Collectors.groupingBy(
+                        a -> a.getCreatedAt().toLocalDate(),
+                        Collectors.counting()))
+                .entrySet().stream()
+                .map(e -> MemberApplicationStatsResponse.builder()
+                        .clubId(club.getClubId())
+                        .clubName(club.getName())
+                        .date(e.getKey().toString())
+                        .count(e.getValue())
+                        .build())
+                .sorted((a, b) -> a.getDate().compareTo(b.getDate()))
+                .toList();
+    }
+
+
+    // =====================================================================================
+    //  GET BY APPLICANT ID
+    // =====================================================================================
+
+    @Override
+    public List<MemberApplicationResponse> getApplicationsByApplicant(Long userId) {
+
+        userRepo.findById(userId)
+                .orElseThrow(() -> new ApiException(HttpStatus.NOT_FOUND, "User not found"));
+
+        return appRepo.findAll().stream()
+                .filter(a -> a.getApplicant().getUserId().equals(userId))
+                .map(this::mapToResponse)
+                .toList();
+    }
+
+
+    // =====================================================================================
+    //  HELPER METHODS
+    // =====================================================================================
+
     private MemberApplicationResponse mapToResponse(MemberApplication app) {
         return MemberApplicationResponse.builder()
                 .applicationId(app.getApplicationId())
@@ -291,8 +651,8 @@ public class MemberApplicationServiceImpl implements MemberApplicationService {
 
     private boolean isClubLeaderOrVice(Long userId, Long clubId) {
         return membershipRepo.findByUser_UserIdAndClub_ClubId(userId, clubId)
-                .map(m -> m.getClubRole() == ClubRoleEnum.LEADER ||
-                        m.getClubRole() == ClubRoleEnum.VICE_LEADER)
+                .map(m -> m.getClubRole() == ClubRoleEnum.LEADER
+                        || m.getClubRole() == ClubRoleEnum.VICE_LEADER)
                 .orElse(false);
     }
 
@@ -301,294 +661,4 @@ public class MemberApplicationServiceImpl implements MemberApplicationService {
         String role = user.getRole().getRoleName();
         return role.equals("ADMIN") || role.equals("UNIVERSITY_STAFF");
     }
-    // ========================== PHẦN MỞ RỘNG ==========================
-
-    @Override
-    public MemberApplicationResponse getApplicationById(CustomUserDetails principal, Long id) {
-        MemberApplication app = appRepo.findById(id)
-                .orElseThrow(() -> new ApiException(HttpStatus.NOT_FOUND, "Application not found"));
-        User user = principal.getUser();
-
-        boolean isOwner = app.getApplicant().getUserId().equals(principal.getId());
-        boolean canView = hasAdminRole(user) || isClubLeaderOrVice(principal.getId(), app.getClub().getClubId());
-        if (!isOwner && !canView)
-            throw new ApiException(HttpStatus.FORBIDDEN, "Access denied");
-
-        return mapToResponse(app);
-    }
-
-    @Override
-    @Transactional
-    public void cancelApplication(CustomUserDetails principal, Long id) {
-        MemberApplication app = appRepo.findById(id)
-                .orElseThrow(() -> new ApiException(HttpStatus.NOT_FOUND, "Application not found"));
-
-        if (!app.getApplicant().getUserId().equals(principal.getId()))
-            throw new ApiException(HttpStatus.FORBIDDEN, "You can only cancel your own applications");
-
-        if (app.getStatus() != MemberApplicationStatusEnum.PENDING)
-            throw new ApiException(HttpStatus.BAD_REQUEST, "Only pending applications can be cancelled");
-
-        appRepo.delete(app);
-    }
-
-    @Override
-    public List<MemberApplicationResponse> getPendingByClub(CustomUserDetails principal, Long clubId) {
-        if (!isClubLeaderOrVice(principal.getId(), clubId) && !hasAdminRole(principal.getUser()))
-            throw new ApiException(HttpStatus.FORBIDDEN, "Access denied");
-
-        return appRepo.findAll().stream()
-                .filter(a -> a.getClub().getClubId().equals(clubId)
-                        && a.getStatus() == MemberApplicationStatusEnum.PENDING)
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    @Transactional
-    public MemberApplicationResponse approve(CustomUserDetails principal, Long id) {
-
-        MemberApplication app = appRepo.findById(id)
-                .orElseThrow(() -> new ApiException(HttpStatus.NOT_FOUND, "Application not found"));
-
-        if (!isClubLeaderOrVice(principal.getId(), app.getClub().getClubId())
-                && !hasAdminRole(principal.getUser()))
-            throw new ApiException(HttpStatus.FORBIDDEN, "Access denied");
-
-        app.setStatus(MemberApplicationStatusEnum.APPROVED);
-        app.setHandledBy(principal.getUser());
-        app.setUpdatedAt(LocalDateTime.now());
-        appRepo.save(app);
-
-        // CHECK active membership
-        List<MembershipStateEnum> activeStates = List.of(
-                MembershipStateEnum.ACTIVE,
-                MembershipStateEnum.APPROVED,
-                MembershipStateEnum.PENDING
-        );
-
-        boolean hasActiveMembership = membershipRepo
-                .existsByUser_UserIdAndClub_ClubIdAndStateIn(
-                        app.getApplicant().getUserId(),
-                        app.getClub().getClubId(),
-                        activeStates
-                );
-
-        if (!hasActiveMembership) {
-
-            Optional<Membership> existingOpt = membershipRepo
-                    .findByUser_UserIdAndClub_ClubId(
-                            app.getApplicant().getUserId(),
-                            app.getClub().getClubId()
-                    );
-
-            if (existingOpt.isPresent()) {
-                // ===== RE-ACTIVATE OLD MEMBERSHIP =====
-                Membership existing = existingOpt.get();
-                existing.setState(MembershipStateEnum.ACTIVE);
-                existing.setJoinedDate(LocalDate.now());
-                existing.setEndDate(null);
-                existing.setClubRole(ClubRoleEnum.MEMBER);
-
-                // DEFAULT VALUES — BẮT BUỘC
-                existing.setMemberLevel(MemberLevelEnum.BASIC);
-                existing.setMemberMultiplier(1.0);
-                existing.setStaff(false);
-
-                membershipRepo.save(existing);
-
-            } else {
-                // ===== CREATE NEW MEMBERSHIP =====
-                Membership m = new Membership();
-                m.setUser(app.getApplicant());
-                m.setClub(app.getClub());
-                m.setClubRole(ClubRoleEnum.MEMBER);
-                m.setState(MembershipStateEnum.ACTIVE);
-                m.setJoinedDate(LocalDate.now());
-
-                // DEFAULT VALUES — BẮT BUỘC
-                m.setMemberLevel(MemberLevelEnum.BASIC);
-                m.setMemberMultiplier(1.0);
-                m.setStaff(false);
-
-                membershipRepo.save(m);
-            }
-        }
-
-        notificationService.sendApplicationResult(
-                app.getApplicant().getEmail(),
-                app.getClub().getName(),
-                true
-        );
-
-        return mapToResponse(app);
-    }
-
-
-
-    @Override
-    @Transactional
-    public MemberApplicationResponse reject(CustomUserDetails principal, Long id, String note) {
-        MemberApplication app = appRepo.findById(id)
-                .orElseThrow(() -> new ApiException(HttpStatus.NOT_FOUND, "Application not found"));
-
-        if (!isClubLeaderOrVice(principal.getId(), app.getClub().getClubId()) && !hasAdminRole(principal.getUser()))
-            throw new ApiException(HttpStatus.FORBIDDEN, "Access denied");
-
-        app.setStatus(MemberApplicationStatusEnum.REJECTED);
-        app.setNote(note);
-        app.setHandledBy(principal.getUser());
-        app.setUpdatedAt(LocalDateTime.now());
-        appRepo.save(app);
-
-        notificationService.sendApplicationResult(app.getApplicant().getEmail(), app.getClub().getName(), false);
-        return mapToResponse(app);
-    }
-
-    @Override
-    public MemberApplicationStatsResponse getStatsByClub(Long clubId) {
-        Club club = clubRepo.findById(clubId)
-                .orElseThrow(() -> new ApiException(HttpStatus.NOT_FOUND, "Club not found"));
-
-        long total = appRepo.countByClubAndStatus(club, MemberApplicationStatusEnum.PENDING)
-                + appRepo.countByClubAndStatus(club, MemberApplicationStatusEnum.APPROVED)
-                + appRepo.countByClubAndStatus(club, MemberApplicationStatusEnum.REJECTED);
-
-        return MemberApplicationStatsResponse.builder()
-                .clubId(club.getClubId())
-                .clubName(club.getName())
-                .total(total)
-                .pending(appRepo.countByClubAndStatus(club, MemberApplicationStatusEnum.PENDING))
-                .approved(appRepo.countByClubAndStatus(club, MemberApplicationStatusEnum.APPROVED))
-                .rejected(appRepo.countByClubAndStatus(club, MemberApplicationStatusEnum.REJECTED))
-                .build();
-    }
-    @Override
-    public List<MemberApplicationResponse> getHandledApplications(CustomUserDetails principal, Long clubId) {
-        // ✅ Chỉ cho phép Leader/Vice/Admin xem
-        if (!isClubLeaderOrVice(principal.getId(), clubId) && !hasAdminRole(principal.getUser())) {
-            throw new ApiException(HttpStatus.FORBIDDEN, "Access denied");
-        }
-
-        return appRepo.findAll().stream()
-                .filter(a -> a.getClub().getClubId().equals(clubId)
-                        && (a.getStatus() == MemberApplicationStatusEnum.APPROVED
-                        || a.getStatus() == MemberApplicationStatusEnum.REJECTED))
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
-    }
-    @Override
-    @Transactional
-    public MemberApplicationResponse resubmitApplication(
-            CustomUserDetails principal,
-            Long id,
-            MemberApplicationCreateRequest req) {
-
-        MemberApplication oldApp = appRepo.findById(id)
-                .orElseThrow(() -> new ApiException(HttpStatus.NOT_FOUND, "Application not found"));
-
-        // ✅ Chỉ cho phép sinh viên chủ đơn resubmit
-        if (!oldApp.getApplicant().getUserId().equals(principal.getId())) {
-            throw new ApiException(HttpStatus.FORBIDDEN, "You can only resubmit your own applications");
-        }
-
-        // ✅ Chỉ cho phép resubmit nếu đơn trước bị từ chối
-        if (oldApp.getStatus() != MemberApplicationStatusEnum.REJECTED) {
-            throw new ApiException(HttpStatus.BAD_REQUEST, "Only rejected applications can be resubmitted");
-        }
-
-        // ✅ Cập nhật nội dung đơn
-        oldApp.setMessage(req.getMessage());
-        oldApp.setStatus(MemberApplicationStatusEnum.PENDING);
-        oldApp.setNote(null);
-        oldApp.setHandledBy(null);
-        oldApp.setUpdatedAt(LocalDateTime.now());
-
-        appRepo.save(oldApp);
-
-        // Gửi thông báo nếu cần
-        notificationService.sendApplicationSubmitted(
-                principal.getUsername(),
-                oldApp.getClub().getName()
-        );
-
-        return mapToResponse(oldApp);
-    }
-
-    // ========================= PHẦN BỔ SUNG CUỐI =========================
-
-    @Override
-    @Transactional
-    public MemberApplicationResponse updateNoteForApplication(CustomUserDetails principal, Long id, String note) {
-        MemberApplication app = appRepo.findById(id)
-                .orElseThrow(() -> new ApiException(HttpStatus.NOT_FOUND, "Application not found"));
-
-        if (!isClubLeaderOrVice(principal.getId(), app.getClub().getClubId()) && !hasAdminRole(principal.getUser())) {
-            throw new ApiException(HttpStatus.FORBIDDEN, "Access denied");
-        }
-
-        app.setNote(note);
-        app.setUpdatedAt(LocalDateTime.now());
-        appRepo.save(app);
-        return mapToResponse(app);
-    }
-
-    @Override
-    public List<MemberApplicationResponse> getApplicationsByStatus(String status) {
-        MemberApplicationStatusEnum st;
-        try {
-            st = MemberApplicationStatusEnum.valueOf(status.toUpperCase());
-        } catch (IllegalArgumentException e) {
-            throw new ApiException(HttpStatus.BAD_REQUEST, "Invalid status: " + status);
-        }
-
-        return appRepo.findAll().stream()
-                .filter(a -> a.getStatus() == st)
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public List<MemberApplicationResponse> getRecentApplications() {
-        return appRepo.findAll().stream()
-                .sorted((a, b) -> b.getCreatedAt().compareTo(a.getCreatedAt()))
-                .limit(10)
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public List<MemberApplicationStatsResponse> getDailyStats(Long clubId) {
-        Club club = clubRepo.findById(clubId)
-                .orElseThrow(() -> new ApiException(HttpStatus.NOT_FOUND, "Club not found"));
-
-        LocalDateTime sevenDaysAgo = LocalDateTime.now().minusDays(7);
-
-        return appRepo.findAll().stream()
-                .filter(a -> a.getClub().equals(club) && a.getCreatedAt().isAfter(sevenDaysAgo))
-                .collect(Collectors.groupingBy(a -> a.getCreatedAt().toLocalDate(), Collectors.counting()))
-                .entrySet().stream()
-                .map(e -> MemberApplicationStatsResponse.builder()
-                        .clubId(club.getClubId())
-                        .clubName(club.getName())
-                        .date(e.getKey().toString())
-                        .count(e.getValue())
-                        .build())
-                .sorted((a, b) -> a.getDate().compareTo(b.getDate()))
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public List<MemberApplicationResponse> getApplicationsByApplicant(Long userId) {
-        User user = userRepo.findById(userId)
-                .orElseThrow(() -> new ApiException(HttpStatus.NOT_FOUND, "User not found"));
-
-        return appRepo.findAll().stream()
-                .filter(a -> a.getApplicant().getUserId().equals(userId))
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
-    }
-
 }
-
-
